feat: 提供抽象的 composer 以简化图构建
- 添加 think 和 flash 模型的区分